--- a/skills.html
+++ b/skills.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>skills</title>
     <script
-      src="https://kit.fontawesome.com/9314e7fe53.j"
+      src="https://kit.fontawesome.com/9314e7fe53.js"
       crossorigin="anonymous"
     ></script>
   </head>
